# OpenACP-App

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  components.json  ds-demo.html  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.claude/: CLAUDE.md
.github/: pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-feature-request.md  config.yml
.github/workflows/: nightly.yml  release-drafter.yml  release.yml  telegram-notify.yml
docs/design/: DECISIONS-LOG.md  DESIGN.md  REFACTOR-COLOR-PLAN.md  STATUS.md  WORKFLOW-LOG.md  openacp.pen
docs/design/pencil/: openacp.pen
docs/design/plans/: 2026-04-15-notification-center-design.md  2026-04-15-notification-center-plan.md  REFACTOR-COLOR-PLAN.md
docs/superpowers/plans/: 2026-04-02-add-workspace-feature.md  2026-04-02-onboarding-install-update.md  2026-04-03-enhanced-chat-messages.md  2026-04-03-plugins-ui.md  2026-04-03-remove-ui-shadcn-migration.md  2026-04-04-shadcn-migration.md  2026-04-06-infra-improvements.md  2026-04-06-settings-dialog.md  2026-04-06-smooth-streaming.md  2026-04-09-browser-panel-stabilization.md  2026-04-10-chat-performance-optimization.md  2026-04-10-terminal-panel.md  2026-04-10-tool-call-visibility-settings.md  2026-04-10-tool-edit-diff-view.md  2026-04-13-unified-turn-lifecycle-app.md  2026-04-14-interrupt-message-mode.md  2026-04-14-remote-identity-claim.md  2026-04-15-unified-shell-env.md  2026-04-16-folder-flow-overlay.md  (+5 more)
scripts/: release.sh  set-channel.sh
src/: entry.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  onboarding.rs  sidecar.rs  state.rs
src-tauri/src/core/: browser.rs  logging.rs  mod.rs  shell_env.rs
src-tauri/src/core/extensions/: manifest.rs  mod.rs  paths.rs  scheme.rs
src-tauri/src/core/filesystem/: commands.rs
src-tauri/src/core/keychain/: commands.rs
src-tauri/src/core/onboarding/: commands.rs  installer.rs  mod.rs  setup.rs
src-tauri/src/core/pty/: commands.rs  manager.rs  mod.rs
src-tauri/src/core/sidecar/: binary.rs  commands.rs  manager.rs  mod.rs
src/app-src/: app.tsx  index.css
src/desktop-src/: bindings.ts  cli.ts
src/ds-demo/: app.tsx  main.tsx  registry.tsx
src/onboarding/: agent-icons.ts  collapsible-log.tsx  install-screen.tsx  setup-wizard.tsx  splash-screen.tsx  startup.ts  step-checklist.tsx  update-toast.tsx  window-drag-bar.tsx
src/openacp/: app.tsx  main.tsx  styles.css  types.ts
src/platform/: loading.tsx  updater.ts  webview-zoom.ts
src/ui/: package.json  vite.config.ts
(+277 files in other folders)
