[package]
name = "openacp-desktop"
version = "2026.414.1"
description = "OpenACP Desktop — AI coding agents, at your service"
edition = "2024"

[lib]
name = "openacp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "devtools", "unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
dirs = "6"
portable-pty = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ignore = "0.4.25"
base64 = "0.22"
wait-timeout = "0.2"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", branch = "dev" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = "z"          # Optimize for binary size
lto = "fat"              # Full link-time optimization
strip = "symbols"        # Strip debug symbols
codegen-units = 1        # Single codegen unit for better optimization
panic = "abort"          # No stack unwinding overhead
incremental = false      # Deterministic release builds
